# stay-locator

./: CONTRIBUTING.md  README.md  alembic.ini  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
docs/: index.md  modules.md
migrations/: README  env.py
migrations/versions/: 2025_11_25_0141-72d113154620_add_origins_table.py
stay_locator/: generate_origins.py  models.py
stay_locator/api/: main_api.py
stay_locator/common/: destination.py  origin.py  utils.py
stay_locator/data_collection/airbnb/: airbnb_api_tool.py
stay_locator/data_collection/common/: api_abstract.py  utils.py
stay_locator/data_processing/: data_processing.py
stay_locator/data_processing/airbnb/: airbnb_processing_tool.py
tests/: test_db.py  test_foo.py
tests/data_collection/: test_airbnb.py
tests/data_processing/: test_airbnb.py
tests/test_data/rapid_api_examples/: airbnb_property_details.json  airbnb_search_by_loc.json
