[tool.poetry]
name = "stay_locator"
version = "0.0.1"
description = "Test here"
authors = ["Connor O'Leary <oleary.connor24@gmail.com>"]
repository = "https://github.com/connorjoleary/stay-locator"
documentation = "https://connorjoleary.github.io/stay-locator/"
readme = "README.md"
packages = [
  {include = "stay_locator"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.121.1"
googlemaps = "^4.10.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
deptry = "^0.16.2"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
responses = "^0.25.8"
pytest-env = "^1.2.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["stay_locator"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"



[tool.pytest.ini_options]
env = [
    "API_KEY=test"
]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
